Fix desktop main nav layout issue

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -814,10 +814,11 @@ h3.order-heading {
     nav ul {
       display: -webkit-flex;
       -webkit-justify-content: flex-end;
-      max-width: 100%;
+      width: 610px;
       display: flex;
       justify-content: flex-end;
-      margin: 0;
+      margin-right: 1em;
+      margin-left: auto;
       padding: 0;
       border: none; }
     nav li {
